# Astral

./: .gitignore  CMAKELISTS.TXT  CMakeLists.txt  LICENSE  README.MD
DOCS/: PLATFORM_IMPLEMENTATIONS.MD
INCLUDE/: ASTRAL.H  ASTRAL_API.H  ASTRAL_CON.H  ASTRAL_DEBUG.H  ASTRAL_MACROS.H  ASTRAL_MEMORY.H  ASTRAL_STDINT.H  ASTRAL_STRING.H
SCRIPTS/: BUILD_LIB.BAT  DEV_PATH.BAT
SOURCE/LINUX/: ASTRAL_LINUX.C
SOURCE/SHARED/: ASTRAL_SHARED.C  ASTRAL_SHARED_CON.C  ASTRAL_SHARED_MEM.C  ASTRAL_SHARED_STR.C
SOURCE/WINDOWS/: ASTRAL_WIN.C  ASTRAL_WIN_CON.C  ASTRAL_WIN_MEM.C
TESTS/: WIN_RUN.BAT
TESTS/ASTRAL_UI_1/: ASTRAL_UI_1.C  CMAKELISTS.TXT  CMakeLists.txt
